Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>NAINA Beauty Salon | Book Appointment</title>
 
   <meta name="description" content="NAINA Beauty Salon is a ladies-only salon offering bridal makeup, facial, waxing, mehndi, mani pedi and party makeup. Book your appointment online.">
+  
+  <!-- ✅ GOOGLE SITE VERIFICATION META TAG -->
+  <meta name="google-site-verification" content="Cbta9tsm_kRkr_Ggmu1jztEcj2HJN4kwex_rgUubwig" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
